--- a/libraries/frameworks/io2012/css/slidify.css
+++ b/libraries/frameworks/io2012/css/slidify.css
@@ -375,8 +375,8 @@ pre code {
 }
 
 .title-slide {
-  background-color: #CBE7A5; /* #EDE0CF; ; #CA9F9D*/
-  background-image:url(assets/img/blackboard-wallpapers1.jpg); 
+  background-color: #216357; /* #EDE0CF; ; #CA9F9D*/
+  background-image:url(https://kurowska.github.io/disk_prices/libraries/frameworks/io2012/css/assets/img/blackboard-wallpapers1.jpg); 
 }
 
 .title-slide hgroup > h1{
